1. add Round timeout command line 2. add custom ip and port

--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
@@ -21,9 +15,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.control.Label?>
 
-<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.loginScene.LoginViewController">
+<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.loginScene.LoginViewController">
    <children>
       <StackPane fx:id="backgroundPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -120,7 +113,7 @@
                   </TextField>
                   <HBox prefHeight="45.0" prefWidth="225.0" spacing="25.0">
                      <children>
-                        <TextField fx:id="ipTextField" prefHeight="25.0" prefWidth="100.0" promptText="IP" style="-fx-background-color: #FFF7DE;">
+                        <TextField fx:id="fx_ipTextField" prefHeight="25.0" prefWidth="100.0" promptText="IP" style="-fx-background-color: #FFF7DE;">
                            <effect>
                               <DropShadow />
                            </effect>
@@ -128,7 +121,7 @@
                               <Font name="Book Antiqua" size="12.0" />
                            </font>
                         </TextField>
-                        <TextField fx:id="portTextField" prefHeight="25.0" prefWidth="100.0" promptText="Port" style="-fx-background-color: #FFF7DE;">
+                        <TextField fx:id="fx_portTextField" prefHeight="25.0" prefWidth="100.0" promptText="Port" style="-fx-background-color: #FFF7DE;">
                            <effect>
                               <DropShadow />
                            </effect>
